syntax = "proto3";

package user;

option go_package = "/user";

import "idl/common.proto";

// User service definition
service UserService {
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUserExists (GetUserExistsRequest) returns (GetUserExistsResponse);
}

// GetUserInfo request and response messages
message GetUserInfoRequest {
  int64 user_id = 1;
  int64 user_id_to_query = 2;
}

message GetUserInfoResponse {
  common.User user = 1;
}

message RegisterRequest {
  string name = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserExistsRequest {
  int64 user_id = 1;
}

message GetUserExistsResponse {
  bool exists = 1;
}



